css fix to event spacing

--- a/src/components/exhibition/exhibition.css
+++ b/src/components/exhibition/exhibition.css
@@ -1,63 +1,62 @@
 h2 {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 
-
 .col1 {
-    display: flex;
-    flex-direction: column;
-    margin-left: 10vw;
-    text-align: left;
-    width: 30vw;
+  display: flex;
+  flex-direction: column;
+  margin-left: 10vw;
+  text-align: left;
+  width: 30vw;
 }
 
 .col1 a {
-    font-size: 1.5rem;
+  font-size: 1.5rem;
 }
 
-
 .col2 {
-    display: flex;
-    flex-direction: column;
-    margin-right: 2rem;
-    text-align: left;
+  display: flex;
+  flex-direction: column;
+  margin-right: 2rem;
+  text-align: left;
 }
 
 .event {
-    align-content: left;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-top: 1rem;
-    text-align: left;
-    width: 35vw;
+  align-content: left;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 1rem;
+  text-align: left;
+  width: 35vw;
 }
 
 .event a {
-    color: var(--link-color);
-    text-shadow: 0px 0px 5px black;
+  color: var(--link-color);
+  text-shadow: 0px 0px 5px black;
 }
 
-.event a, p {
-    line-height: 1.5rem;
+.event a,
+p {
+  line-height: 1.5rem;
 }
 
 .eventDescription {
-    display: flex;
-    flex-direction: row;
-    align-content: left;
+  display: flex;
+  flex-direction: row;
+  align-content: left;
 }
 
 .eventsPageContent {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-    height: 73vh;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  height: 73vh;
 }
 
 @media (max-width: 1400px) {
-    .event {
+  .event {
     align-content: left;
     display: flex;
     flex-direction: column;
@@ -65,40 +64,43 @@ h2 {
     margin-top: 1rem;
     text-align: left;
     width: 25vw;
-    }
+  }
 
-    .event a p {
-        font-size: 1rem;
-    }
+  .event a p {
+    font-size: 1rem;
+  }
 }
 
 @media (max-width: 480px) {
-h2{
-    font-size: 1rem;
-    }
+  a, p {
+    margin-top: .5rem;
+  }
 
-.col1 {
+  .eventDescription p {
+    margin-top: 1rem;
+  }
+  .col1 {
     margin-bottom: 2rem;
     margin-left: 0;
     text-align: left;
-    }
-    
-.col2 {
+  }
+
+  .col2 {
     text-align: left;
-    }
+  }
 
-.event {
+  .event {
     width: 100%;
-}
+  }
 
-.eventDescription {
+  .eventDescription {
     align-self: start;
     display: flex;
     flex-direction: row;
     width: 100%;
-}
+  }
 
-.eventsPageContent {
+  .eventsPageContent {
     align-content: left;
     flex-direction: column;
     justify-content: flex-start;
@@ -106,5 +108,5 @@ h2{
     margin-right: auto;
     height: 82vh;
     width: 80vw;
-}
+  }
 }
